<resources>
    <string name="app_name">PayPoint</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="text_logo">Text Logo</string>
    <string name="logo">Logo</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_signup">Don\'t have an account? Signup!</string>
    <string name="signup_login">Already have an account? Login!</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="email_hint">yourname@example.com</string>
    <string name="plate_number">Plate Number</string>
    <string name="upload_file">Upload File</string>
    <string name="puv_driver_s_identification_card">PUV Driver\'s Identification Card</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="submit">Submit</string>
    <string name="plate_number_">Plate Number:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name_">First Name:</string>
    <string name="get_started">Get Started!</string>
    <string name="getstarted_desc">One Step left…\n\nDownload and print your QR Code! So your passsengers can scan it!</string>
    <string name="applicants">Applicants</string>
    <string name="drivers">Drivers</string>
    <string name="accept">Accept</string>

    <string-array name="route_driver">
        <item>Select Route</item>
        <item>Taxi - Dagupan City</item>
        <item>Bus - Dagupan City</item>
        <item>Bonuan Boquig - Dagupan City</item>
        <item>Bonuan Binloc - Dagupan City</item>
        <item>Bonuan Tondaligan - Dagupan City</item>
        <item>Calasiao - Dagupan City</item>
        <item>Downtown - Dagupan City</item>
        <item>Lucao - Dagupan City</item>
        <item>Mangaldan - Dagupan City</item>
        <item>Sta. Barbara - Dagupan City</item>
    </string-array>

    <string-array name="type_of_trans">
        <item>Select Type</item>
        <item>Jeepney - PUJ</item>
        <item>Taxi/Van - PUV</item>
        <item>Bus - PUB</item>
    </string-array>

    <string-array name="how_to_use">
        <item>Forgot Password</item>
        <item>Booking and Payment</item>
        <item>Top Up balance</item>
        <item>Changing Password</item>
        <item>Register as a Driver</item>
        <item>Contact Us!</item>
    </string-array>
</resources>