<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_pp"
    tools:context=".DriverRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/reg_bday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="@string/date_of_birth"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_txtBday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_pNumber" />

            <TextView
                android:id="@+id/reg_pNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="@string/plate_number_"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_txtPNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_lName" />

            <Button
                android:id="@+id/reg_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/main_font"
                android:text="@string/submit"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_uploadID" />

            <TextView
                android:id="@+id/reg_fName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="First Name:"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_txtFName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reg_uploadID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/main_font"
                android:text="@string/upload_file"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/reg_ID2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reg_ID2" />

            <TextView
                android:id="@+id/reg_lName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_txtLName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_fName" />

            <TextView
                android:id="@+id/reg_dLicense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="Driver's License:"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_uploadLicense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_bday" />

            <TextView
                android:id="@+id/reg_ID2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/main_font"
                android:text="@string/puv_driver_s_identification_card"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/reg_uploadID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_dLicense" />

            <Button
                android:id="@+id/reg_uploadLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/main_font"
                android:text="Upload File"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/reg_dLicense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reg_dLicense" />

            <EditText
                android:id="@+id/reg_txtFName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/txt_roundcorner"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingStart="8sp"
                android:paddingTop="4sp"
                android:paddingEnd="8sp"
                android:paddingBottom="4sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_fName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reg_txtLName"
                app:layout_constraintTop_toTopOf="@+id/reg_fName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/reg_txtLName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/txt_roundcorner"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:paddingStart="8sp"
                android:paddingTop="4sp"
                android:paddingEnd="8sp"
                android:paddingBottom="4sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_lName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reg_txtPNumber"
                app:layout_constraintTop_toTopOf="@+id/reg_lName" />

            <EditText
                android:id="@+id/reg_txtBday"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/txt_roundcorner"
                android:ems="10"
                android:hint="DD/MM/YYYY"
                android:inputType="date"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/reg_bday"
                app:layout_constraintEnd_toStartOf="@+id/reg_calendar"
                app:layout_constraintTop_toTopOf="@+id/reg_bday"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/reg_txtPNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/txt_roundcorner"
                android:ems="10"
                android:hint="@string/plate_number"
                android:inputType="textPersonName"
                android:paddingStart="8sp"
                android:paddingTop="4sp"
                android:paddingEnd="8sp"
                android:paddingBottom="4sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_pNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reg_txtBday"
                app:layout_constraintTop_toTopOf="@+id/reg_pNumber" />

            <Button
                android:id="@+id/reg_calendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#fff"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:onClick="setDate"
                app:cornerRadius="10dp"
                app:icon="@drawable/calendar"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#FFFFFF"
                app:iconTintMode="multiply"
                app:layout_constraintBottom_toBottomOf="@+id/reg_txtBday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reg_txtBday" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>